<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/item_one" />
        <item
            android:id="@+id/rides"
            android:icon="@drawable/rides"
            android:title="@string/item_two" />
        <item
            android:id="@+id/rate_card"
            android:icon="@drawable/ratecard"
            android:title="@string/item_four" />
        <item
            android:id="@+id/refer_friend"
            android:icon="@drawable/share_friend"
            android:title="@string/item_seven" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/item_five" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/signout"
            android:title="@string/item_six" />
    </group>
</menu>
