<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1.2"
                android:background="#fff"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/destination"/>

                <TextView
                    android:id="@+id/current_loc_Ride"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="8dip"
                    android:text="@string/current_location"
                    android:textColor="#000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1.2"
                android:background="#fff"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/source"/>

                <TextView
                    android:id="@+id/destination_Ride"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="9"
                    android:background="#fff"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="8dip"
                    android:text="@string/destination"
                    android:textColor="#000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1.2"
                android:background="#fff"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/cab"/>

                <TextView
                    android:id="@+id/cab_type_Ride"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="8dip"
                    android:text="@string/cabtype"
                    android:textColor="#000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/distance_fare_layout_Ride"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="10">

                <LinearLayout
                    android:id="@+id/distance_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/distance_Ride"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorGreenText"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/distance"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:textStyle="italic"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fare_layout_Ride"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fare_Ride"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorGreenText"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/permile"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:textStyle="italic"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ridenowlaterbuttonlayout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageButton
                    android:id="@+id/ride_now_IMGbutton"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ride_now"
                    android:visibility="visible"/>

                <ImageButton
                    android:id="@+id/ride_later_IB_Ride"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ride_laters"
                    android:visibility="visible"/>

                <ImageButton
                    android:id="@+id/confirm_IMGbutton"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/confirm"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/reject_IB_Ride"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/reject"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gettingdetailsLL"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="3.8"
                android:orientation="vertical"
                android:visibility="visible"
                android:weightSum="4">

                <ProgressBar
                    android:id="@+id/cab_details_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:indeterminate="false"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/cab_details_progress_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cab_details_progress_text"
                    android:textColor="#000"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cab_details_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="3.5"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:weightSum="12">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/cab_reach_time"
                        android:textColor="#000"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/travel_time"
                        android:textColor="#000"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/driver_name"
                        android:textColor="#000"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/contact"
                        android:textColor="#000"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/cab_num"
                        android:textColor="#000"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/fare_approx"
                        android:textColor="#000"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:weightSum="12">

                    <TextView
                        android:id="@+id/cab_reach_time_Ride"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="15 Min"
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/travelTime"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text=""
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/driver_name_Ride"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="Mr. XYZ"
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/driver_contact_num_Ride"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="+41123456789"
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/Cab_num_Ride"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="US 123456AZ"
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/fare_approx"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="US 123456AZ"
                        android:textColor="@color/colorGreenText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>